--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
-@import-normalize; /* bring in normalize.css styles */
+/* @import-normalize; bring in normalize.css styles */
+*, ::after, ::before {
+  box-sizing: border-box;
+}
 
 body {
   margin: 0;
@@ -7,9 +10,68 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #fff;
+  background-color: #133349;
+  
+}
+
+ul, li, h1, h2, h3, h4, Link, NavLink, a, p {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style: none;
+  color: #778899;
+}
+
+img {
+  display: block;
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
+    aspect-ratio: 3/4;
+  object-fit: cover;
+}
+
+a > img {
+transition: transform 250ms linear;
+}
+
+a:is(:hover, :focus) > img {
+  transform: scale(1.03);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/* navlink */
+.nav-item, .det-item {
+  padding: 15px;
+  display: block;
+}
+
+.nav-item::after {
+  content: '';
+  width: 100%;
+  opacity: 0;
+  height: 1px;
+  display: block;
+  background-color: #778899;
+  transition: opacity linear 250ms, background-color linear 250ms;
+}
+
+.nav-item:is(:hover, :focus)::after {
+  background-color: #133349;
+  opacity: 1;
+}
+
+.nav-item.active::after {
+  background-color: linen;
+      opacity: 1;
+}
+
+.det-item {
+font-weight: 500;
+font-size: 18px;
 }
